syntax = "proto3";

option csharp_namespace = "Discount.GRPC.Protos";

service DiscountProtoService {
	rpc GetDiscount(GetDiscountRequest) returns (CouponResponse)
	rpc CreateDiscount(CouponRequest) returns (CouponResponse)
	rpc UpdateDiscount(CouponRequest) returns (CouponResponse)
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse)
}

message GetDiscountRequest {
	string product_id = 1;
}

message CouponRequest {
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string description = 4;
	int32 amount = 5;
}

message CouponResponse {
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string description = 4;
	int32 amount = 5;
}

message DeleteDiscountRequest {
	string product_id = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}
